--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,8 @@
   border-bottom-left-radius: 50px !important;
 }
 .swiper {
-  width: 400px;
-  height: 550px;
+  width: 500px;
+  height: 630px;
 }
 
 .swiper-slide {
@@ -50,7 +50,6 @@
   justify-content: center;
   border-radius: 18px;
   font-size: 22px;
-
   color: #fff;
 }
 
@@ -93,3 +92,51 @@
 .swiper-slide:nth-child(10n) {
   background-color: rgb(54, 94, 77);
 } */
+.hotnotbg{
+  background: #c514233a !important;
+}
+.slick-slider .slick-dots{
+  position: relative !important;
+  margin-bottom: 40px !important;
+}
+.slick-slider .slick-dots li>div{
+  height: 8px !important;
+  width: 8px !important;
+} 
+.slidecontainer {
+  width: 100%;
+}
+
+.inputRange {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 3px;
+  background: #E8E6EA;
+  outline: none;
+
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.inputRange:hover {
+  opacity: 1;
+}
+
+.inputRange::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 30px;
+  height: 30px;
+  background: #272829;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 4px solid white !important;
+
+}
+
+.css-j8gyih-TwoThumbInputRange{
+  width: 100% !important;
+}
+.css-mx55hg{
+  height: 6px !important;
+}
