--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,13 @@
   height: 630px;
 }
 
+@media (max-width:575px) {
+    .swiper{
+      width: 300px;
+  height: 430px;
+    }
+}
+
 .swiper-slide {
   display: flex;
   align-items: center;
@@ -52,6 +59,14 @@
   font-size: 22px;
   color: #fff;
 }
+.gmap-container {
+  position: relative;
+  z-index: 10;
+}
+.gmap-container > div {
+  pointer-events: auto !important;
+}
+
 
 /* .swiper-slide:nth-child(1n) {
   background-color: rgb(206, 17, 17);
